--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 	<div Class="NavBar">
 	 <div Class="Nav"><a href="#">Gmail</a></div>
 	 <div Class="Nav"><a href="#">Images</a></div>
-	 <div Class="Nav"><img scr="#" alt="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTOX819b9tjfbnVd4vzJYKxcSa25KcL-JG1bYorc1P4L06s4htm"></div>
-	 <div Class="Nav"><img scr="#" alt="https://cdn.dribbble.com/users/59145/screenshots/1820857/bell_icon.jpg"></div>
-	 <div Class="Nav"><img scr="#" alt="https://cdn4.iconfinder.com/data/icons/alphabet-3/500/ABC_alphabet_letter_font_graphic_language_text_J-512.png"></div>
+	 <div Class="Nav"><img class="Apps" scr="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTOX819b9tjfbnVd4vzJYKxcSa25KcL-JG1bYorc1P4L06s4htm" alt=""></div>
+	 <div Class="Nav"><img class="Notifications" alt="https://cdn.dribbble.com/users/59145/screenshots/1820857/bell_icon.jpg" alt=""></div>
+	 <div Class="Nav"><img class="https://cdn4.iconfinder.com/data/icons/alphabet-3/500/ABC_alphabet_letter_font_graphic_language_text_J-512.png" alt="">></div>
 	</div>
 
 	 <div Class="Logo"><img scr="#" alt="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTC47w11_ULdDYQ62UmeZWCndjDrWg5G5H-31nSnOxIMj280UfU"></div>
