--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<div Class="NavBar">
 	 <div Class="Nav"><a href="#">Gmail</a></div>
 	 <div Class="Nav"><a href="#">Images</a></div>
-	 <div Class="Nav"><img class="Apps" scr="/home/Google-Homepage/apps.ico" alt=""></div>
+	 <div Class="Nav"><img class="Apps" src="https://image.flaticon.com/icons/svg/56/56844.svg" alt=""></div>
 	 <div Class="Nav"><img class="Notifications" alt="https://cdn.dribbble.com/users/59145/screenshots/1820857/bell_icon.jpg" alt=""></div>
 	 <div Class="Nav"><img class="https://cdn4.iconfinder.com/data/icons/alphabet-3/500/ABC_alphabet_letter_font_graphic_language_text_J-512.png" alt="">></div>
 	</div>
